// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-cTkOiY fgQua-D"
  >
    <div
      className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
    >
      <ul
        className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 fcarpj kMmwHJ"
      >
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            0
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            1
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            2
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            3
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            4
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            5
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            6
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            7
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            8
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            9
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            10
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            11
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            12
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            13
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            14
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            15
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            16
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            17
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            18
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            19
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            20
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            21
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            22
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            23
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
  >
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 krBxWn kMmwHJ"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 fcarpj kMmwHJ"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          0
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          2
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          3
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          4
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          5
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          6
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          7
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          8
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          9
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          10
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          11
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          12
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          13
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          14
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          15
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          16
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          17
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          18
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          19
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          20
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          21
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          22
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          23
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-fvFlmW bSGmWW"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
  >
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 krBxWn kMmwHJ"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ezipRf jLWoYA"
        >
          0
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ezipRf jLWoYA"
        >
          1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ezipRf jLWoYA"
        >
          2
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ezipRf jLWoYA"
        >
          3
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ezipRf jLWoYA"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
